--- a/prtweb24/src/components/Home.css
+++ b/prtweb24/src/components/Home.css
@@ -5,10 +5,6 @@
   width: 100%;
   height: 100vh; /* Ajuste a altura conforme necessário */
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: black; /* Fundo de fallback */
 }
 
 .background-video {
@@ -17,7 +13,7 @@
   left: 50%;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Faz o vídeo cobrir a área sem distorcer */
+  object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1; /* Coloca o vídeo atrás do conteúdo */
 }
@@ -29,15 +25,4 @@
   text-align: center;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.5); /* Adiciona uma sobreposição escura para melhor legibilidade */
-}
-
-/* Ajustes para dispositivos menores */
-@media (max-width: 768px) {
-  .hero {
-    height: 80vh; /* Ajusta a altura para telas menores, se necessário */
-  }
-
-  .hero-content {
-    padding: 15px;
-  }
 }
